project group membership is reactified

--- a/app/views/consent_forms/_form.html.erb
+++ b/app/views/consent_forms/_form.html.erb
@@ -6,7 +6,7 @@
     <%= f.input :active %>
     <%= f.input :start_date %>
     <%= f.input :end_date %>
-    <%= f.association :user, label_method: :email, selected: @current_user.id %>
+    <%= f.association :user, label_method: :email, selected: current_user.id %>
     <%= f.input :pdf, as: :file %>
     <% #This will have to be fixed later %= f.association :courses, as: :checkboxes %>
     <div data-role="tabs" id="text-tab">
