--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<%= theme_code = @current_user.nil? ? 'a' : @current_user.theme.code %>
+<%= theme_code = current_user.nil? ? 'a' : current_user.theme.code %>
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
   <%= f.input :welcomed, as: :hidden, input_html: { value: true } %>
