--- a/app/views/candidate_lists/edit.html.erb
+++ b/app/views/candidate_lists/edit.html.erb
@@ -14,17 +14,17 @@
     <tr>
       <th align="right"><%= t :for %>:</th>
       <td>
-        <%= @current_user.name( anonymize ) %>
+        <%= current_user.name( anonymize ) %>
         <% # Is group play possible?
           if @candidate_list.bingo_game.group_option? &&
-              @candidate_list.bingo_game.project.group_for_user( @current_user ).present? %>
+              @candidate_list.bingo_game.project.group_for_user( current_user ).present? %>
         <% if @candidate_list.is_group? %>
           <em><%= t '.behalf' %>: <%= @candidate_list.group.get_name( anonymize ) %></em>
         <% else %>
           <% if @candidate_list.group_requested # Have you already requested collaboration? %>
             [<%= t '.waiting' %>]
           <% elsif @candidate_list.others_requested_help > 0 # Is your team waiting to hear from you?
-              group = @candidate_list.bingo_game.project.group_for_user( @current_user )
+              group = @candidate_list.bingo_game.project.group_for_user( current_user )
             %>
           <%= t '.req_rec', grp_name: group.get_name( anonymize ) %>: 
           <%= link_to (t :accept ), request_bingo_collaboration_path( 
@@ -35,7 +35,7 @@
                         data: { confirm: (t '.confirm_decline' ) } %>
         <% else 
                 query = t '.req_help', grp_name:
-                @candidate_list.bingo_game.project.group_for_user( @current_user ).
+                @candidate_list.bingo_game.project.group_for_user( current_user ).
                   get_name( anonymize ) %>
         <%= link_to( query, request_bingo_collaboration_path( 
                         id: @candidate_list.id, desired: "yes" ), 
