--- a/app/views/graphing/index.html.erb
+++ b/app/views/graphing/index.html.erb
@@ -2,24 +2,24 @@
 <!-- this styling is added to the png when it is downloaded -->
 <div id='crowbar-workspace' style='display: none'>
 </div>
-<% if @current_user.admin || @current_user.is_researcher? %>
+<% if current_user.admin || current_user.is_researcher? %>
   <% theme_code = get_theme_code
      anonymize = get_anonymous %>
   <div class="ui-grid-a">
     <div class='ui-block-a'>
       <label for="for_research" style="align:right">Consenting users only?</label>
       <select name="for_research" id="for_research" data-role="slider"
-              data-mini="true" <%= ( anonymize || @current_user.is_researcher? ) ? 'disabled' : '' %> >
-        <option value="true" <%= (@current_user.is_researcher?) ?  'selected' : '' %> ><%= t 'simple_form.yes' %></option>
-        <option value="false"<%= (!@current_user.is_researcher?) ?  'selected' : '' %>><%= t 'simple_form.no' %></option>
+              data-mini="true" <%= ( anonymize || current_user.is_researcher? ) ? 'disabled' : '' %> >
+        <option value="true" <%= (current_user.is_researcher?) ?  'selected' : '' %> ><%= t 'simple_form.yes' %></option>
+        <option value="false"<%= (!current_user.is_researcher?) ?  'selected' : '' %>><%= t 'simple_form.no' %></option>
       </select>
     </div>
     <div class='ui-block-b'>
       <label for="anonymous" style="align:right">Anonymize the results?</label>
       <select name="anonymous" id="anonymous" data-role="slider"
-              data-mini="true" <%= ( anonymize || @current_user.is_researcher? ) ? 'disabled' : '' %> >
-        <option value="true" <%= (anonymize || @current_user.is_researcher?) ? 'selected' : '' %> ><%= t 'simple_form.yes' %></option>
-        <option value="false"<%= !(anonymize || @current_user.is_researcher?) ? 'selected' : '' %>><%= t 'simple_form.no' %></option>
+              data-mini="true" <%= ( anonymize || current_user.is_researcher? ) ? 'disabled' : '' %> >
+        <option value="true" <%= (anonymize || current_user.is_researcher?) ? 'selected' : '' %> ><%= t 'simple_form.yes' %></option>
+        <option value="false"<%= !(anonymize || current_user.is_researcher?) ? 'selected' : '' %>><%= t 'simple_form.no' %></option>
       </select>
     </div>
   </div>
@@ -40,7 +40,7 @@
       </fieldset>
       <fieldset class="ui-grid-a">
         <div class="ui-block-a">
-          <% projects = @current_users_projects.collect{ |project| [project.get_name( anonymize || @current_user.is_researcher? ), project.id] }
+          <% projects = current_users_projects.collect{ |project| [project.get_name( anonymize || current_user.is_researcher? ), project.id] }
 	projects.insert( 0, [ t( :none_selected ), -1] ) %>
           <%= select_tag :project, 
             options_for_select( projects ) ,
