--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -109,12 +109,13 @@ h3
 
 #title_head:before{
   content: "beta";
-  position: fixed;
+  position: absolute;
   width: 80px;
   height: 25px;
   background: #EE8E4A;
-  top: 7px;
-  left: -20px;
+  top: 5px;
+  left: auto;
+  right: -20px;
   text-align: center;
   font-size: 13px;
   font-family: sans-serif;
@@ -122,7 +123,8 @@ h3
   font-weight: bold;
   color: #fff;
   line-height: 27px;
-  -ms-transform:rotate(-45deg);
-  -webkit-transform:rotate(-45deg);
-  transform:rotate(-45deg);
+  -ms-transform:rotate(45deg);
+  -webkit-transform:rotate(45deg);
+  transform:rotate(45deg);
 }
+
