--- a/app/views/candidate_lists/show.html.erb
+++ b/app/views/candidate_lists/show.html.erb
@@ -13,7 +13,7 @@
     <td><span id='performance'><%= @candidate_list.performance %></span></td>
     </tr>
   </table>
-  <h2><%= t 'candidate_lists.terms' %></h2>
+  <h2><%= t 'candidate_lists.show.title' %></h2>
   <% if -42 == @candidate_list.bingo_game_id %>
 
     <%= react_component "BingoBuilder", {
