--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -13,16 +13,11 @@
   </head>
   <body>
     <div data-role="page" data-theme="<%= theme_code %>">
-      <div data-role="header" data-position="fixed" style="overflow:hidden;" >
-        <h1 id="title_head">
-          <%= t :title %> <%= " : " + @title unless @title.nil? %>
-          <%= image_tag 'CoLab_small.png', size: '32x32', alt: 'CoLab Logo' %>
-        </h1>
-        <%= react_component "Quote", {
-          url: get_quote_path,
-          token: form_authenticity_token } %>
-        <%= render 'shared/admin_menu' %>
-      </div>
+    <%= react_component "PageWrapper", {
+          token: form_authenticity_token,
+          getEndpointsUrl: endpoints_path( unit: 'home' )
+
+      }%>
       <div data-role="content">
         <%= link_to t( :concepts_edit ), concepts_path,
           data: { inline: true, mini: true, role: 'button' } if current_user.is_admin?%>
