--- a/app/views/layouts/candidate_lists.html.erb
+++ b/app/views/layouts/candidate_lists.html.erb
@@ -14,19 +14,15 @@
   </head>
   <body>
     <div data-role="page" data-theme="<%= current_user.nil? ? "a" : current_user.theme.code %>">
-      <div data-role="header" data-position="fixed" style="overflow:hidden;" >
-        <h1 id="title_head">
-          <%= t :title %> <%= " : " + @title unless @title.nil? %>
-          <%= image_tag 'CoLab_small.png', size: '32x32', alt: 'CoLab Logo' %>
-        </h1>
-        <%= react_component "Quote", {
-          url: get_quote_path,
-          token: form_authenticity_token } %>
+    <%= react_component "PageWrapper", {
+          token: form_authenticity_token,
+          getEndpointsUrl: endpoints_path( unit: 'home' )
+
+      }%>
         <a data-role="button" href="#bingo_performance" id="instr_btn" data-icon="info"
                 data-rel="popup" data-transition="pop"
                 class="ui-btn ui-btn-corner-all ui-icon-info ui-btn-right
                 ui-btn-icon-left" ><%= t 'candidate_lists.feedback_info_label' %></a>
-      </div>
     </br>
     <div data-role="content">
       <% if flash[:error] -%>
