--- a/app/views/layouts/installments.html.erb
+++ b/app/views/layouts/installments.html.erb
@@ -7,21 +7,15 @@
     <title><%= t :title %> <%= " : " + @title unless @title.nil? %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= stylesheet_link_tag    "application", :media => "all" %>
-    <%= javascript_include_tag "installments_manifest" %>
     <%= javascript_pack_tag 'application' %>
     <%= csrf_meta_tags %>
   </head>
   <body>
     <div data-role="page" data-theme="<%= theme_code %>">
-      <div data-role="header" data-position="fixed" style="overflow:hidden;" >
-        <h1 id="title_head">
-          <%= t :title %> <%= " : " + @title unless @title.nil? %>
-          <%= image_tag 'CoLab_small.png', size: '32x32', alt: 'CoLab Logo' %>
-        </h1>
-        <%= react_component "Quote", {
-          url: get_quote_path,
-          token: form_authenticity_token } %>
-      </div>
+    <%= react_component "PageWrapper", {
+          token: form_authenticity_token,
+          getEndpointsUrl: endpoints_path( unit: 'home' )
+      }%>
       <div data-role="content">
         <% if flash[:error] -%>
           <p class='error'><%=h flash[:error] %></p>
