--- a/app/views/bingo_games/show.html.erb
+++ b/app/views/bingo_games/show.html.erb
@@ -2,9 +2,11 @@
 <% theme_code = get_theme_code
    anonymize = get_anonymous %>
 <%= react_component "BingoGameDataAdminWrapper", {
-        bingoGameUrl: bingo_game_path( @bingo_game ),
-        conceptUrl: bingo_concepts_path( id: @bingo_game.id ),
-        gameResultsUrl: game_results_path( id: @bingo_game.id ),
-        token: form_authenticity_token } %>
+        token: form_authenticity_token,
+        getEndpointsUrl: endpoints_path( unit: '' ),
+        courseId: @bingo_game.course_id,
+        bingoGameId: @bingo_game.id
+        }
+        %>
 
 <%= link_to t( :back_to_course ), @bingo_game.course %>
