Task lists and Course Lists are built

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,3 +1,8 @@
+<%= react_component "CourseList", {
+  token: form_authenticity_token,
+  getEndpointsUrl: endpoints_path( unit: '' )
+} %>
+<hr/>
 <p id="notice"><%= notice %></p>
 <% theme_code = get_theme_code
    anonymize = get_anonymous %>
