Brought back FullCalendar (beta)

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,7 @@
   update_url: proc_course_reg_requests_path,
   token: form_authenticity_token } %>
   
-<%= react_component "TaskList", {
+<%= react_component "HomeShell", {
   token: form_authenticity_token,
   getEndpointsUrl: endpoints_path( unit: '' )
   } %>
