--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -1,41 +1,4 @@
-<p id="notice"><%= notice %></p>
-<% theme_code = get_theme_code
-   anonymize = get_anonymous %>
-<table data-role="table"
-  id="basicTable"
-  data-column-btn-theme"<%= theme_code %>" 
-  data-column-popup-theme="<%= theme_code %>" 
-  data-mode="columntoggle"
-  data-column-btn-theme="<%= theme_code %>"
-  data-column-btn-text="<%= t :column_select %>"
-  class="table-stroke ui-shadow table-stripe table-ui-responsive ">
-  <thead>
-    <tr>
-      <th><%= t :name %></th>
-      <th data-priority="0"><%= t 'courses.courses' %></th>
-      <th data-priority="1"><%= t :instructors %></th>
-      <th data-priority="0"><%= t :students %></th>
-      <th data-priority="1"><%= t 'projects.projects' %></th>
-      <th data-priority="1"><%= t :exps %></th>
-      <th data-priority="1"><%= t :terms_lists %></th>
-      <th data-priority="1"><%= t :actions %></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @schools.each do |school| %>
-      <tr>
-        <td><%= link_to school.get_name( anonymize ), school %></td>
-        <td><%= school.courses.size %></td>
-        <td><%= school.instructors.size %></td>
-        <td><%= school.enrolled_students.size %></td>
-        <td><%= school.projects.size %></td>
-        <td><%= school.experiences.size %></td>
-        <td><%= school.bingo_games.size %></td>
-        <td><%= link_to t(:show), school_path( school ) %>&nbsp;|&nbsp;
-          <%= link_to t(:edit), edit_school_path(school) %>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-  <br>
-  <%= link_to t('schools.new.title'), new_school_path if current_user.is_admin? %>
+<%= react_component "SchoolList", {
+  token: form_authenticity_token,
+  getEndpointsUrl: endpoints_path( unit: '' )
+} %>
