--- a/app/views/consent_forms/show.html.erb
+++ b/app/views/consent_forms/show.html.erb
@@ -1,3 +1,10 @@
+<%= react_component "ConsentFormDataAdmin", {
+      token: form_authenticity_token,
+      consentFormId: @consent_form.id,
+      getEndpointsUrl: endpoints_path( unit: '' )
+      }
+      %>
+
 <% theme_code = get_theme_code %>
 <p id="notice"><%= notice %></p>
 <h1><%= t 'consent_forms.show.name' %>:</h1>
