--- a/app/views/consent_logs/edit.html.erb
+++ b/app/views/consent_logs/edit.html.erb
@@ -1,3 +1,9 @@
+<%= react_component "ConsentLog", {
+      token: form_authenticity_token,
+      consentFormId: @consent_form.id,
+      getEndpointsUrl: endpoints_path( unit: '' )
+      }
+      %>
 <h1><%= t '.opening' %></h1>
 <h2><%= t '.title' %></h2>
 <P>
