Conversion to React-Router is in progress

--- a/app/views/candidate_lists/edit.html.erb
+++ b/app/views/candidate_lists/edit.html.erb
@@ -1,3 +1,9 @@
+<%= react_component "CandidateListEntry", {
+        token: form_authenticity_token,
+        getEndPointsUrl: endpoints_path( unit: '' ),
+        bingo_game_id: @candidate_list.bingo_game_id
+        } %>
+
 <%= simple_form_for @candidate_list do |f| %>
   <%= f.error_notification %>
   <% theme_code = get_theme_code
