--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <div data-role="page" data-theme="<%= theme_code %>">
       <%= react_component "PageWrapper", {
           token: form_authenticity_token,
-          getEndpointsUrl: endpoints_path( unit: '' )
+          getEndpointsUrl: endpoints_path
 
       }%>
       <div data-role="content">
