--- a/app/views/layouts/installments.html.erb
+++ b/app/views/layouts/installments.html.erb
@@ -14,7 +14,7 @@
     <div data-role="page" data-theme="<%= theme_code %>">
     <%= react_component "PageWrapper", {
           token: form_authenticity_token,
-          getEndpointsUrl: endpoints_path( unit: '' )
+          getEndpointsUrl: endpoints_path
       }%>
       <div data-role="content">
         <% if flash[:error] -%>
